feat: register and fix code map with register

--- a/views/register/index.html
+++ b/views/register/index.html
@@ -17,7 +17,7 @@
             <div>
                 <p class="header-input"><b>Email</b></p>
                 <div class="input">
-                    <input type="email" placeholder="Enter email" id="email" required>
+                    <input type="email" placeholder="Enter email" id="username" required>
                 </div>
 
             </div>
@@ -45,9 +45,9 @@
             
         </div>
         <div class="line"></div>
-        <div >You already have account? <a  href="./homepage/login.js">Login Now!!</a></div>
+        <div >You already have account? <a  href="../../index.html">Login Now!!</a></div>
     </div>
-
+    <script src="../../controllers/registerController.js" defer></script>
 </body>
 
 </html>
