--- a/views/register/index.html
+++ b/views/register/index.html
@@ -36,18 +36,17 @@
                 
             </div>
             <div class="line"></div>
-            <p>By creating an account you agree to our
-                <span><a href="./">Terms & Privacy</a></span>
-            </p>
+                <p>By creating an account you agree to our <a href="./">Terms & Privacy</a></p>
             <div class="input">
                 <button class="button-register" id="register">Register</button>
             </div>
             
         </div>
         <div class="line"></div>
-        <div >You already have account? <a  href="../../index.html">Login Now!!</a></div>
+        <div >You already have account? <a  href="../../index.html">Login Now</a></div>
     </div>
-    <script src="../../controllers/registerController.js" defer></script>
-</body>
 
+</body>
+<script src="../../helpers/utils.js"></script>
+<script src="./script.js"></script>
 </html>
