fix: fix syntax

--- a/views/register/index.html
+++ b/views/register/index.html
@@ -48,5 +48,6 @@
 
 </body>
 <script src="../../helpers/utils.js"></script>
+<script src="../../helpers/constants.js"></script>
 <script src="./script.js"></script>
 </html>
